# umkc_robot_2014

./: .gitignore  .gitmodules  README.md  gapFinder.h
DistanceSensorLibrary/: Distance2D120X.cpp  readme.txt
commander/: .Makefile.swp  .gitignore  Commander  Doxyfile  README.md  makedoc.sh  projects  serial_nodes.launch
commander/LoggerSubscriber/: Makefile
commander/doc/LED_HELPER/: Makefile
commander/doc/html/: annotated.html  classExitHandler-members.html  classExitHandler.html  classLedNotifier-members.html  classLedNotifier.html  classLogger-members.html  classLogger.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  exit__handlers_8h_source.html  files.html  functions.html  functions_func.html  index.html  logger_8h_source.html  notifier_8h_source.html
commander/doc/latex/: annotated.tex  classExitHandler.tex  classLedNotifier.tex  classLogger.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
commander/res/: notify_id.txt
commander/src/: .handlereturns.h.swp  .main.cpp.swp  error_id.txt  exceptor.cpp  exceptor.h  exit_handlers.cpp  exit_handlers.h  id_tool.cpp  id_tool.h  logger.cpp  logger.h  main  main.cpp  notifier.cpp  notifier.h  notify_id.txt  sub_writer.cpp  waitforgo.cpp  waitforgo.h
libraries/DistanceSensorLibrary/: DistSmoother.h  Distance2D120X.cpp  Distance2D120X.h  DistanceSensor.cpp
libraries/QuadEncoder/: QuadEncoder.h
libraries/bridge/: wesley_mega_bridge.h
libraries/sabertooth_mtrcmd/: motor_cmd.h  movement.h
libraries/sensing/: fronteyes.h  gapfinder.h  magellan_edgesensors.h  parallelpark.h  parallelpark_simple.h
mega_alternative/: mega_alternative.ino
ros_sandbox/src/ros_imu/: CMakeLists.txt  package.xml
ros_sandbox/src/ros_imu/launch/: imu.launch
ros_sandbox/src/ros_imu/msg/: orientation.msg  rotMatrix.msg  spatialRaw.msg
ros_sandbox/src/ros_imu/src/: calculate_orientationServer.cpp  config.h  publishIMU.cpp
ros_sandbox/src/ros_imu/src/orientation_headers/: imuFilter.cpp  imuFilter.h
ros_sandbox/src/ros_imu/src/phidget_headers/: phidget_handlers.h  spatial_helper.cpp  spatial_helper.h
ros_sandbox/src/ros_imu/srv/: GetOrientation.srv  imu_filter.srv
scrapBucket/QuadEncoderTest3/: QuadEncoderTest3.ino
scrapBucket/gapfinder_tester/: gapfinder.h  gapfinder_tester.ino  magellan_edgesensors.h
scrapBucket/turn90_tester/: turn90_tester.ino
scrapBucket/wesley/: motor_cmd.h  wesley.ino
wesley/: readme.txt
wesley/arm/: keyboard.ino
wesley/camera/: coordinates_flame.lst  coordinates_tools.lst  forward_kinematic.cpp  read_file.cpp  readme.txt
wesley/config/: notify_id.txt  position_rigs.lst  position_tool-032914.lst  position_tool-033114.lst  position_tool-040114.lst  position_tool.lst
wesley/mini/: gapfinder.h  ino.ini  ino.uno  magellan_edgesensors.h  wallfollower.h
wesley/ros/: build.wesley
wesley/ros/src/imu_tools/imu_filter_madgwick/: CMakeLists.txt
wesley/ros/src/imu_tools/imu_filter_madgwick/include/imu_filter_madgwick/: imu_filter.h
wesley/ros/src/imu_tools/imu_filter_madgwick/src/: imu_filter.cpp
(+489 files in other folders)
